--- a/DarkPrimeWeather/darkprimeweather/package.json
+++ b/DarkPrimeWeather/darkprimeweather/package.json
@@ -12,9 +12,7 @@
     "react-animated-weather": "^2.0.0",
     "react-detect-offline": "^2.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "react-spring": "^8.0.19",
-    "react-transition-group": "^2.9.0"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
