--- a/DarkPrimeWeather/darkprimeweather/package.json
+++ b/DarkPrimeWeather/darkprimeweather/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "leaflet": "^1.4.0",
     "opencage-api-client": "^0.5.0",
     "primeicons": "^1.0.0",
     "primereact": "^3.1.2",
@@ -12,6 +13,7 @@
     "react-animated-weather": "^2.0.0",
     "react-detect-offline": "^2.3.0",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.2.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
